syntax = "proto3"

package egelrpc;

// interface of a server
service EgelRpc {
    rpc EgelCall(EgelTerm) returns (EgelTerm) {}

    rpc EgelStream(stream EgelTerm) returns (stream EgelTerm) {}
}


message EgelTerm {
    string term = 1;
}


